--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@ body {
 <body>
 
 <div class="header">
-  <h1>My Website</h1>
-  <p>A website created by me.</p>
+  <h1>Welcome to Project Portal</h1>
+  <p>A digital portfolio</p>
 </div>
 
 <div class="navbar">
@@ -125,8 +125,9 @@ body {
 <div class="row">
   <div class="side">
     <h2>Home</h2>
-    <h5>Welcome to the Project Portal</h5>
-    <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+    <h5>Project Portal</h5>
+    <p>This is a digital portfolio meant to house whatever computer science related projects I have done and will be doing in the future that accurately shows off what I can do and will continue to improve at.</p>
+    <h5>Update Log</h5>
   </div>
 </div>
 
