--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@ body {
   <div class="side">
     <h2>Welcome</h2>
     <p>This is a digital portfolio meant to house whatever software or web development related projects I have done and will be doing in the future that accurately shows off what I can do and will continue to improve at.</p>
+    <p><a href="mailto:tejumoluwaikolawol@lewisu.edu">My email: tejumoluwaikolawol@lewisu.edu </a></p>
     <h5>Changelog</h5>
 <div class="footer">
   <h4><p id="demo"></p>
